apps/jellyfin/jellyfin/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest # TODO: Figure out the proper version
          ports:
            - name: jellyfin
              containerPort: 8096
              hostPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
          resources:
            limits:
              gpu.intel.com/i915: 1
          securityContext:
            runAsUser: 500
            runAsGroup: 500
            fsGroup: 500
          livenessProbe:
            httpGet:
              path: /health
              port: jellyfin
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 3
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: media
          nfs:
            server: 10.0.0.11
            path: /tank/media
            readOnly: true
