apps/jellyfin/jellyfin/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: jellyfin
